AntlrSources/InnerParser.java
// Generated from Inner.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InnerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, NUMBER=2, DQ_STRING=3, DATE=4, WS=5, COMMENTS=6, OPENBRACKET=7, 
		CLOSEBRACKET=8, COMMA=9, ENDCOMMAND=10, EQ=11, MINUSEQ=12, PLUSEQ=13, 
		TYPE=14, STARTSTATEMENT=15, ENDSTATEMENT=16, FUNCTION=17, VALUES=18, IF=19, 
		ELSE=20, WHILE=21, RETURN=22, CONTINUE=23, BREAK=24, STATIC=25, CALL=26, 
		WRITE=27, NULL=28, OPERATOR=29, UNARYOPERATOR=30, CONDITIONBOOLOPERATOR=31, 
		CONDITIONOPERATOR=32, CONDITIONUNARYPERATOR=33, TYPENAME=34, DATANAME=35, 
		DATADEF=36, CONSTANTDEF=37, SYSTEMDEF=38;
	public static final int
		RULE_varValue = 0, RULE_dataname = 1, RULE_condition = 2, RULE_boolExpression = 3, 
		RULE_expression = 4, RULE_ifStatement = 5, RULE_whileStatement = 6, RULE_eqStatement = 7, 
		RULE_plusEqStatement = 8, RULE_minusEqStatement = 9, RULE_returnStatement = 10, 
		RULE_continueStatement = 11, RULE_breakStatement = 12, RULE_callStatement = 13, 
		RULE_writeStatement = 14, RULE_statement = 15, RULE_function = 16, RULE_staticBlock = 17, 
		RULE_type = 18, RULE_varDefinition = 19, RULE_dataDef = 20, RULE_constantDef = 21, 
		RULE_systemDef = 22, RULE_inner = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"varValue", "dataname", "condition", "boolExpression", "expression", 
			"ifStatement", "whileStatement", "eqStatement", "plusEqStatement", "minusEqStatement", 
			"returnStatement", "continueStatement", "breakStatement", "callStatement", 
			"writeStatement", "statement", "function", "staticBlock", "type", "varDefinition", 
			"dataDef", "constantDef", "systemDef", "inner"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'('", "')'", "','", "'.'", 
			"'='", "'-='", "'+='", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOLEAN", "NUMBER", "DQ_STRING", "DATE", "WS", "COMMENTS", "OPENBRACKET", 
			"CLOSEBRACKET", "COMMA", "ENDCOMMAND", "EQ", "MINUSEQ", "PLUSEQ", "TYPE", 
			"STARTSTATEMENT", "ENDSTATEMENT", "FUNCTION", "VALUES", "IF", "ELSE", 
			"WHILE", "RETURN", "CONTINUE", "BREAK", "STATIC", "CALL", "WRITE", "NULL", 
			"OPERATOR", "UNARYOPERATOR", "CONDITIONBOOLOPERATOR", "CONDITIONOPERATOR", 
			"CONDITIONUNARYPERATOR", "TYPENAME", "DATANAME", "DATADEF", "CONSTANTDEF", 
			"SYSTEMDEF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Inner.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InnerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class VarValueContext extends ParserRuleContext {
		public TerminalNode NULL() { return getToken(InnerParser.NULL, 0); }
		public DatanameContext dataname() {
			return getRuleContext(DatanameContext.class,0);
		}
		public TerminalNode BOOLEAN() { return getToken(InnerParser.BOOLEAN, 0); }
		public TerminalNode NUMBER() { return getToken(InnerParser.NUMBER, 0); }
		public TerminalNode DQ_STRING() { return getToken(InnerParser.DQ_STRING, 0); }
		public TerminalNode DATE() { return getToken(InnerParser.DATE, 0); }
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public VarValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitVarValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarValueContext varValue() throws RecognitionException {
		VarValueContext _localctx = new VarValueContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_varValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(48);
				match(NULL);
				}
				break;
			case 2:
				{
				setState(49);
				dataname();
				}
				break;
			case 3:
				{
				setState(50);
				match(BOOLEAN);
				}
				break;
			case 4:
				{
				setState(51);
				match(NUMBER);
				}
				break;
			case 5:
				{
				setState(52);
				match(DQ_STRING);
				}
				break;
			case 6:
				{
				setState(53);
				match(DATE);
				}
				break;
			case 7:
				{
				setState(54);
				callStatement();
				}
				break;
			case 8:
				{
				setState(55);
				expression(0);
				}
				break;
			case 9:
				{
				setState(56);
				condition(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatanameContext extends ParserRuleContext {
		public TerminalNode DATANAME() { return getToken(InnerParser.DATANAME, 0); }
		public TerminalNode OPENBRACKET() { return getToken(InnerParser.OPENBRACKET, 0); }
		public TerminalNode TYPENAME() { return getToken(InnerParser.TYPENAME, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(InnerParser.CLOSEBRACKET, 0); }
		public DatanameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataname; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitDataname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatanameContext dataname() throws RecognitionException {
		DatanameContext _localctx = new DatanameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dataname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPENBRACKET) {
				{
				setState(59);
				match(OPENBRACKET);
				setState(60);
				match(TYPENAME);
				setState(61);
				match(CLOSEBRACKET);
				}
			}

			setState(64);
			match(DATANAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public BoolExpressionContext boolExpression() {
			return getRuleContext(BoolExpressionContext.class,0);
		}
		public TerminalNode OPENBRACKET() { return getToken(InnerParser.OPENBRACKET, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(InnerParser.CLOSEBRACKET, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode CONDITIONUNARYPERATOR() { return getToken(InnerParser.CONDITIONUNARYPERATOR, 0); }
		public TerminalNode CONDITIONBOOLOPERATOR() { return getToken(InnerParser.CONDITIONBOOLOPERATOR, 0); }
		public TerminalNode BOOLEAN() { return getToken(InnerParser.BOOLEAN, 0); }
		public DatanameContext dataname() {
			return getRuleContext(DatanameContext.class,0);
		}
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		return condition(0);
	}

	private ConditionContext condition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionContext _localctx = new ConditionContext(_ctx, _parentState);
		ConditionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_condition, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(67);
				boolExpression();
				}
				break;
			case 2:
				{
				setState(68);
				match(OPENBRACKET);
				setState(71);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(69);
					condition(0);
					}
					break;
				case 2:
					{
					setState(70);
					boolExpression();
					}
					break;
				}
				setState(73);
				match(CLOSEBRACKET);
				}
				break;
			case 3:
				{
				setState(75);
				match(CONDITIONUNARYPERATOR);
				setState(76);
				condition(4);
				}
				break;
			case 4:
				{
				setState(77);
				boolExpression();
				setState(78);
				match(CONDITIONBOOLOPERATOR);
				setState(79);
				condition(3);
				}
				break;
			case 5:
				{
				setState(84);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BOOLEAN:
					{
					setState(81);
					match(BOOLEAN);
					}
					break;
				case OPENBRACKET:
				case DATANAME:
					{
					setState(82);
					dataname();
					}
					break;
				case CALL:
					{
					setState(83);
					callStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ConditionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(88);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(89);
						match(CONDITIONBOOLOPERATOR);
						setState(90);
						condition(8);
						}
						break;
					case 2:
						{
						_localctx = new ConditionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(91);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(92);
						match(CONDITIONBOOLOPERATOR);
						setState(93);
						boolExpression();
						}
						break;
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BoolExpressionContext extends ParserRuleContext {
		public TerminalNode OPENBRACKET() { return getToken(InnerParser.OPENBRACKET, 0); }
		public BoolExpressionContext boolExpression() {
			return getRuleContext(BoolExpressionContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(InnerParser.CLOSEBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CONDITIONOPERATOR() { return getToken(InnerParser.CONDITIONOPERATOR, 0); }
		public TerminalNode DQ_STRING() { return getToken(InnerParser.DQ_STRING, 0); }
		public TerminalNode NUMBER() { return getToken(InnerParser.NUMBER, 0); }
		public TerminalNode DATE() { return getToken(InnerParser.DATE, 0); }
		public DatanameContext dataname() {
			return getRuleContext(DatanameContext.class,0);
		}
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public BoolExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitBoolExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolExpressionContext boolExpression() throws RecognitionException {
		BoolExpressionContext _localctx = new BoolExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_boolExpression);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(OPENBRACKET);
				setState(100);
				boolExpression();
				setState(101);
				match(CLOSEBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				expression(0);
				setState(104);
				match(CONDITIONOPERATOR);
				setState(105);
				expression(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DQ_STRING:
					{
					setState(107);
					match(DQ_STRING);
					}
					break;
				case NUMBER:
					{
					setState(108);
					match(NUMBER);
					}
					break;
				case DATE:
					{
					setState(109);
					match(DATE);
					}
					break;
				case OPENBRACKET:
				case DATANAME:
					{
					setState(110);
					dataname();
					}
					break;
				case CALL:
					{
					setState(111);
					callStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode OPENBRACKET() { return getToken(InnerParser.OPENBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(InnerParser.CLOSEBRACKET, 0); }
		public TerminalNode UNARYOPERATOR() { return getToken(InnerParser.UNARYOPERATOR, 0); }
		public TerminalNode DQ_STRING() { return getToken(InnerParser.DQ_STRING, 0); }
		public TerminalNode NUMBER() { return getToken(InnerParser.NUMBER, 0); }
		public TerminalNode DATE() { return getToken(InnerParser.DATE, 0); }
		public DatanameContext dataname() {
			return getRuleContext(DatanameContext.class,0);
		}
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public TerminalNode OPERATOR() { return getToken(InnerParser.OPERATOR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(117);
				match(OPENBRACKET);
				setState(118);
				expression(0);
				setState(119);
				match(CLOSEBRACKET);
				}
				break;
			case 2:
				{
				setState(121);
				match(UNARYOPERATOR);
				setState(122);
				expression(2);
				}
				break;
			case 3:
				{
				setState(128);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DQ_STRING:
					{
					setState(123);
					match(DQ_STRING);
					}
					break;
				case NUMBER:
					{
					setState(124);
					match(NUMBER);
					}
					break;
				case DATE:
					{
					setState(125);
					match(DATE);
					}
					break;
				case OPENBRACKET:
				case DATANAME:
					{
					setState(126);
					dataname();
					}
					break;
				case CALL:
					{
					setState(127);
					callStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(132);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(133);
					match(OPERATOR);
					setState(134);
					expression(4);
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(InnerParser.IF, 0); }
		public TerminalNode OPENBRACKET() { return getToken(InnerParser.OPENBRACKET, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(InnerParser.CLOSEBRACKET, 0); }
		public List<TerminalNode> STARTSTATEMENT() { return getTokens(InnerParser.STARTSTATEMENT); }
		public TerminalNode STARTSTATEMENT(int i) {
			return getToken(InnerParser.STARTSTATEMENT, i);
		}
		public List<TerminalNode> ENDCOMMAND() { return getTokens(InnerParser.ENDCOMMAND); }
		public TerminalNode ENDCOMMAND(int i) {
			return getToken(InnerParser.ENDCOMMAND, i);
		}
		public List<TerminalNode> ENDSTATEMENT() { return getTokens(InnerParser.ENDSTATEMENT); }
		public TerminalNode ENDSTATEMENT(int i) {
			return getToken(InnerParser.ENDSTATEMENT, i);
		}
		public TerminalNode ELSE() { return getToken(InnerParser.ELSE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InnerVisitor ) return ((InnerVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(IF);
			setState(141);
			match(OPENBRACKET);
			setState(142);
			condition(0);
			setState(143);
			match(CLOSEBRACKET);
			{
			setState(144);
			match(STARTSTATEMENT);
			setState(145);
			match(ENDCOMMAND);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << CONTINUE) | (1L << BREAK) | (1L << CALL) | (1L << WRITE) | (1L << TYPENAME) | (1L << DATANAME) | (1L << DATADEF) | (1L << CONSTANTDEF) | (1L << SYSTEMDEF))) != 0)) {
				{
				{
				setState(146);
				statement();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152);
			match(ENDSTATEMENT);
			setState(153);
			match(ENDCOMMAND);
			}
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(155);
				match(ELSE);
				setState(156);
				match(STARTSTATEMENT);
				setState(157);
				match(ENDCOMMAND);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << CONTINUE) | (1L << BREAK) | (1L << CALL) | (1L << WRITE) | (1L << TYPENAME) | (1L << DATANAME) | (1L << DATADEF) | (1L << CONSTANTDEF) | (1L << SYSTEMDEF))) != 0)) {
					{
					{
					setState(158);
					statement();
					}
					}
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(164);
				match(ENDSTATEMENT);
				setState(165);
				match(ENDCOMMAND);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
